<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview_currentuser"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/btn_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"
        android:onClick="logout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_kodeBarang"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:hint="@string/hint_kodeBarang"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_kodeBarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_namaBarang"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:hint="@string/hint_namaBarang"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textfield_kodeBarang"
        app:layout_constraintVertical_bias="0.01">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_namaBarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_hargaBarang"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:hint="@string/hint_hargaBarang"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textfield_namaBarang"
        app:layout_constraintVertical_bias="0.01">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_hargaBarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_create"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:text="@string/btn_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textfield_hargaBarang"
        app:layout_constraintVertical_bias="0.01"
        android:onClick="add"/>

    <Button
        android:id="@+id/button_update"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:text="@string/btn_update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_create"
        app:layout_constraintVertical_bias="0.001"
        android:onClick="update"/>

    <Button
        android:id="@+id/button_delete"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:text="@string/btn_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_update"
        app:layout_constraintVertical_bias="0.001"
        android:onClick="delete"/>

    <Button
        android:id="@+id/button_read"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:text="@string/btn_read"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_delete"
        app:layout_constraintVertical_bias="0.001"
        android:onClick="view"/>


    <TextView
        android:id="@+id/textview_listbarang"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_read"
        app:layout_constraintVertical_bias="0.067" />
</androidx.constraintlayout.widget.ConstraintLayout>